working on the template

--- a/frontend/src/assets/sass/paper-kit/_dropdown.scss
+++ b/frontend/src/assets/sass/paper-kit/_dropdown.scss
@@ -86,7 +86,7 @@
 
         &.dropdown-primary .dropdown-item:hover,
         &.dropdown-primary .dropdown-item:focus{
-            background-color: $bg-primary;
+            background-color: rgb(206, 197, 197);
         }
         &.dropdown-info .dropdown-item:hover,
         &.dropdown-info .dropdown-item:focus{
