--- a/frontend/src/app/components/components.component.html
+++ b/frontend/src/app/components/components.component.html
@@ -5,7 +5,7 @@
             <div class="container">
                 <div class="title-brand">
                     <div class="angular-logo">
-                        <img src="assets/img/logoMelkart.jpg" alt="" style="height:40px; width:150px;">
+                        <img src="assets/img/logoMelkart.jpg" alt="" style="height:40px; width:180px;">
                     </div>
                     <h1 class="presentation-title">MELKART</h1>
 
@@ -65,10 +65,10 @@
             </a> -->
         </h6>
     </div>
-    <div class="main">
-      <app-basicelements></app-basicelements>
-      <app-navigation></app-navigation>
-      <div class="section">
+    <!-- <div class="main"> -->
+      <!-- <app-basicelements></app-basicelements> -->
+      <!-- <app-navigation></app-navigation> -->
+      <!-- <div class="section">
           <div class="container">
               <div class="row">
                   <div class="col-md-6">
@@ -136,30 +136,30 @@
                   </div>
               </div>
           </div>
-      </div>
-      <div class="section section-notifications" id="notifications">
+      </div> -->
+      <!-- <div class="section section-notifications" id="notifications">
           <div class="container">
               <div class="tim-title">
                   <h3>Notification</h3>
               </div>
           </div>
           <app-notification></app-notification>
-      </div>
-      <app-typography></app-typography>
+      </div> -->
+      <!-- <app-typography></app-typography> -->
       <div class="section javascript-components">
-          <div class="container">
-              <div class="tim-title">
+          <!-- <div class="container"> -->
+              <!-- <div class="tim-title">
                   <h2>Angular Native Components</h2>
-              </div>
-              <div class="row" id="modals">
-                  <div class="col-md-6">
+              </div> -->
+              <!-- <div class="row" id="modals"> -->
+                  <!-- <div class="col-md-6">
                       <div class="tim-title">
                           <h3>Modal</h3>
                       </div>
                       <app-modal-component></app-modal-component>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="tim-title">
+                  </div> -->
+                  <!-- <div class="col-md-6"> -->
+                      <!-- <div class="tim-title">
                           <h3>Popovers</h3>
                       </div>
 
@@ -171,9 +171,9 @@
                       <button type="button" class="btn btn-outline-danger btn-round" placement="top"
                           ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on top">
                           on top
-                      </button>
+                      </button> -->
 
-                      <button type="button" class="btn btn-outline-danger btn-round" placement="left"
+                      <!-- <button type="button" class="btn btn-outline-danger btn-round" placement="left"
                           ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on left">
                           on left
                       </button>
@@ -181,15 +181,15 @@
                       <button type="button" class="btn btn-outline-danger btn-round" placement="bottom"
                           ngbPopover="Here will be some very useful information about this popover." popoverTitle="Popover on bottom">
                           on bottom
-                      </button>
+                      </button> -->
 
-                  </div>
-                  <br/>
-                  <div class="col-md-6">
-                      <div class="tim-title">
+                  <!-- </div> -->
+                  <!-- <br/>
+                  <div class="col-md-6"> -->
+                      <!-- <div class="tim-title">
                           <h3>Datepicker</h3>
-                      </div>
-                      <div class="row">
+                      </div> -->
+                      <!-- <div class="row">
                           <div class='col-sm-6'>
                               <form class="form-inline">
                                   <div class="form-group">
@@ -205,9 +205,9 @@
                                   </div>
                               </form>
                           </div>
-                      </div>
-                  </div>
-                  <div class="col-md-6">
+                      </div> -->
+                  <!-- </div> -->
+                  <!-- <div class="col-md-6">
                       <div class="tim-title">
                           <h3>Tooltips</h3>
                       </div>
@@ -224,11 +224,11 @@
                       <button type="button" class="btn btn-outline-danger btn-round" placement="bottom" ngbTooltip="Tooltip on bottom">
                          on bottom
                       </button>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="section" id="carousel">
+                  </div> -->
+              <!-- </div> -->
+          <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="section" id="carousel">
           <div class="container">
               <div class="tim-title">
                   <h3>Carousel</h3>
@@ -260,12 +260,12 @@
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
         <div class="section section-dark section-nucleo-icons">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <h2 class="title">Nucleo Icons</h2><br/>
+                        <h2 class="title">Carbonate de calcium</h2><br/>
                         <p class="description">
                             Now UI Kit comes with 100 custom icons made by our friends from NucleoApp. The official package contains over 2.100 thin icons which are looking great in combination with Now UI Kit Make sure you check all of them and use those that you like the most.
                         </p><br/>
@@ -299,7 +299,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">Completed with examples</h2>
+                        <h2 class="title">MELKART MINERALS FRANCE</h2>
                         <p class="description">The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go. More importantly, looking at them will give you a picture of what you can built with this powerful kit.</p>
                     </div>
                 </div>
@@ -322,7 +322,7 @@
                                     <i class="fa fa-twitter"></i>
                                 </a>
                             </div>
-                            <form class="register-form">
+                            <!-- <form class="register-form">
                                 <label>Email</label>
                                 <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
                                   <div class="input-group-prepend">
@@ -347,7 +347,7 @@
                             </form>
                             <div class="forgot">
                                 <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col text-center" routerLinkActive="active">
                             <a [routerLink]="['/signup']" class="btn btn-outline-neutral btn-round btn-lg">View Register Page</a>
@@ -375,7 +375,7 @@
                 </div>
             </div>
         </div>
-        <div class="section">
+        <!-- <div class="section">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
@@ -409,6 +409,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
