--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="section section-navbars">
     <div class="container" id="menu-dropdown">
         <div class="tim-title">
-            <h3>Menu</h3>
+            <h3>hello</h3>
         </div>
         <div class="row">
             <div class="col-md-6">
