--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="https://www.creative-tim.com">Paper Kit 2 Angular</a>
+            <a class="navbar-brand" href="https://www.creative-tim.com">MELKART MINERALS</a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
@@ -9,6 +9,7 @@
             </button>
         </div>
         <div class="navbar-collapse" id="navbarToggler">
+            
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
@@ -28,17 +29,17 @@
                         <p class="d-lg-none">Instagram</p>
                     </a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <!-- <li class="nav-item" *ngIf="!isDocumentation()">
                     <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/paper-kit-2-angular" target="_blank">
                         <i class="fa fa-github"></i>
                         <p class="d-lg-none">GitHub</p>
                     </a>
-                </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                </li> -->
+                <!-- <li class="nav-item" *ngIf="!isDocumentation()">
                     <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
                 </li>
                 <li class="nav-item" *ngIf="isHome()">
-                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local" target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
+                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local" target="_blank" class="btn btn-danger btn-round">Gamme de produits</a>
                 </li>
                 <li class="nav-item" *ngIf="!isHome()">
                     <a [routerLink]="['/home']" *ngIf="!isDocumentation()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Components</a>
@@ -46,8 +47,22 @@
                 </li>
                 <li class="nav-item" *ngIf="isDocumentation()">
                     <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local" target="_blank" class="nav-link">Have an issue</a>
-                </li>
+                </li> -->
             </ul>
+            
+            <div ngbDropdown class="d-inline-block dropdown">
+                <a class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle>Dropdown</a>
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
+                   <!-- <a class="dropdown-header">Dropdown header</a> -->
+                   <a class="dropdown-item" href="/">Action</a>
+                   <a class="dropdown-item">Another action</a>
+                   <a class="dropdown-item">Something else here</a>
+                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item">Separated link</a>
+                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item">Another separated link</a> 
+                </div>
+            </div>  
         </div>
     </div>
 </nav>
