--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="https://www.creative-tim.com">MELKART MINERALS</a>
+            <a class="navbar-brand" href="https://www.creative-tim.com" >MELKART MINERALS</a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
@@ -51,18 +51,62 @@
             </ul>
             
             <div ngbDropdown class="d-inline-block dropdown">
-                <a class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle>Dropdown</a>
+                <a  class="btn btn-outline-info btn-round" id="dropdownBasic1" ngbDropdownToggle>L'entreprise</a>
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
                    <!-- <a class="dropdown-header">Dropdown header</a> -->
-                   <a class="dropdown-item" href="/">Action</a>
-                   <a class="dropdown-item">Another action</a>
-                   <a class="dropdown-item">Something else here</a>
-                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item" href="/">Domaine d'activité</a>
+                   <a class="dropdown-item">Charte qualité</a>
+                   <a class="dropdown-item">Recrutement</a>
+                   <!-- <div class="dropdown-divider"></div>
                    <a class="dropdown-item">Separated link</a>
                    <div class="dropdown-divider"></div>
-                   <a class="dropdown-item">Another separated link</a> 
+                   <a class="dropdown-item">Another separated link</a>  -->
                 </div>
+                
             </div>  
+            <div ngbDropdown class="d-inline-block dropdown">
+                <a  class="btn btn-outline-info btn-round" id="dropdownBasic1" ngbDropdownToggle>Gamme de produits</a>
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
+                   <!-- <a class="dropdown-header">Dropdown header</a> -->
+                   <a class="dropdown-item" href="/">Carbonate de calcium GCC</a>
+                   <a class="dropdown-item"> la chaux hydraulique naturelle NGL </a>
+                   <a class="dropdown-item">Silice</a>
+                   <div class="dropdown-divider">Gypse</div>
+                   <!-- <a class="dropdown-item">Separated link</a>
+                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item">Another separated link</a>  -->
+                </div>
+                
+            </div>  
+            <div ngbDropdown class="d-inline-block dropdown">
+                <a  class="btn btn-outline-info btn-round" id="dropdownBasic1" ngbDropdownToggle>Applications</a>
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
+                   <!-- <a class="dropdown-header">Dropdown header</a> -->
+                   <a class="dropdown-item" href="/">Peinture</a>
+                   <a class="dropdown-item">Plastique</a>
+                   <a class="dropdown-item">Alimentation animale</a>
+                   <div class="dropdown-divider">Papiers</div>
+                   <!-- <a class="dropdown-item">Separated link</a>
+                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item">Another separated link</a>  -->
+                </div>
+                
+            </div>  
+            <div ngbDropdown class="d-inline-block dropdown">
+                <a  class="btn btn-outline-info btn-round" id="dropdownBasic1" ngbDropdownToggle>Implantation</a>
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
+                   <!-- <a class="dropdown-header">Dropdown header</a> -->
+                   <a class="dropdown-item" href="/">Réseau commercial</a>
+                   <a class="dropdown-item">Implantation France-Tunisie</a>
+                   <a class="dropdown-item">Siège Social - Arles (Bouches-Du-Rhône)</a>
+                   <div class="dropdown-divider">Carrière de Kasserine</div>
+                   <!-- <a class="dropdown-item">Separated link</a>
+                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item">Another separated link</a>  -->
+                </div>
+                
+            </div>  
+            
         </div>
     </div>
 </nav>
