--- a/frontend/src/app/shared/navbar/navbar.component.scss
+++ b/frontend/src/app/shared/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 #dropdownBasic1
 {
-    // background-color: rgba(42, 44, 40, 0.555);
+    background-color: rgba(42, 44, 40, 0.555);
     color: white
 
 }
