--- a/frontend/src/app/components/components.component.html
+++ b/frontend/src/app/components/components.component.html
@@ -5,7 +5,7 @@
             <div class="container">
                 <div class="title-brand">
                     <div class="angular-logo">
-                        <img src="assets/img/logoMelkart.jpg" alt="" style="height:40px; width:180px;">
+                        <img src="assets/img/logoMelkart.jpg" alt="" style="height:40px; width:180px;margin-left:-45px;">
                     </div>
                     <h1 class="presentation-title">MELKART</h1>
 
@@ -20,7 +20,7 @@
                     </div> -->
                 </div>
 
-                <h2 class="presentation-subtitle text-center">Carbonate de calcium</h2>
+                <h2 class="presentation-subtitle text-center">MINERALS</h2>
             </div>
         </div>
         <!-- <div class="section" id="carousel"> -->
@@ -57,7 +57,7 @@
             </div>
         <!-- </div> -->
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">MELKART GROUPE FRANCE
+        <h6 class=" category-absolute ml-auto mr-auto">MELKART GROUPE 
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
             <!-- <a href="https://www.creative-tim.com" target="_blank">
@@ -299,7 +299,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">MELKART MINERALS FRANCE</h2>
+                        <h2 class="title">MELKART MINERALS</h2>
                         <p class="description">The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go. More importantly, looking at them will give you a picture of what you can built with this powerful kit.</p>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 ml-auto mr-auto">
                         <div class="card card-register">
-                            <h3 class="title">Welcome</h3>
+                            <h3 class="title">Bienvenue</h3>
                             <div class="social-line text-center">
                                 <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
                                     <i class="fa fa-facebook-square"></i>
