--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="https://www.creative-tim.com" >MELKART MINERALS</a>
+            <a class="navbar-brand" href="/" >MELKART MINERALS</a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
@@ -54,7 +54,7 @@
                 <a  class="btn btn-outline-info btn-round" id="dropdownBasic1" ngbDropdownToggle>L'entreprise</a>
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
                    <!-- <a class="dropdown-header">Dropdown header</a> -->
-                   <a class="dropdown-item" href="/">Domaine d'activité</a>
+                   <a class="dropdown-item" href="domaine">Domaine d'activité</a>
                    <a class="dropdown-item">Charte qualité</a>
                    <a class="dropdown-item">Recrutement</a>
                    <!-- <div class="dropdown-divider"></div>
