charte and recrutement done

--- a/frontend/src/app/components/entreprise/domaine/domaine.component.html
+++ b/frontend/src/app/components/entreprise/domaine/domaine.component.html
@@ -7,35 +7,64 @@
     <div class="content-center">
       <div class="container">
         <div class="title-brand">
-          <div class="angular-logo">
+          <!-- <div class="angular-logo">
             <img
               src="assets/img/logoMelkart.jpg"
               alt=""
               style="height: 40px; width: 180px; margin-left: -45px;"
             />
-          </div>
-          <h1 class="presentation-title">Domaine</h1>
+          </div> -->
+          <h1 class="presentation-title" style="font-size: 50px;">Domaine d'activité</h1>
         </div>
 
-        <h2 class="presentation-subtitle text-center">d'activité</h2>
+        <h2 class="presentation-subtitle text-center"> GCC extrait des mines les plus pures d’Afrique du nord, la gamme de
+            carbonate de calcium MELKA se caractérise par sa grande pureté
+            chimique et minéralogique et par un travail d’affinement poussé pour
+            satisfaire les différents besoins des industriels.</h2>
       </div>
     </div>
     <!-- <div class="section" id="carousel"> -->
     <!-- <div class="container"> -->
-    
-      <div class="row">
-        <div class="col-md-8 mr-auto ml-auto">
-          <p
-            class="presentation-subtitle text-center"
-            style="color: #ffffff;"
-          >
-            GCC extrait des mines les plus pures d’Afrique du nord, la gamme de
-            carbonate de calcium MELKA se caractérise par sa grande pureté
-            chimique et minéralogique et par un travail d’affinement poussé pour
-            satisfaire les différents besoins des industriels.
-          </p>
+        <div class="container">
+        <div class="row">
+            <div class="col-md-8 mr-auto ml-auto">
+                <div class="card page-carousel">
+                    <ngb-carousel>
+                        <ng-template ngbSlide>
+                            <img src="./assets/img/dom1.jpg" alt="Random first slide">
+                            <div class="carousel-caption">
+                                <p style="color:rgb(1, 4, 14); font-weight: bold;"> </p>
+                            </div>
+                        </ng-template>
+                        <ng-template ngbSlide>
+                            <img src="./assets/img/dom2.jpg" alt="Random second slide">
+                            <div class="carousel-caption">
+                                <p style="color:rgb(1, 4, 14); font-weight: bold;"> </p>
+                            </div>
+                        </ng-template>
+                        <ng-template ngbSlide>
+                            <img src="./assets/img/dom3.JPG" alt="Random third slide">
+                            <div class="carousel-caption">
+                                <p style="color:rgb(1, 4, 14); font-weight: bold;"></p>
+                            </div>
+                        </ng-template>
+                        <ng-template ngbSlide>
+                            <img src="./assets/img/dom4.JPG" alt="Random third slide">
+                            <div class="carousel-caption">
+                                <p style="color:rgb(1, 4, 14); font-weight: bold;"></p>
+                            </div>
+                        </ng-template>
+                        <ng-template ngbSlide>
+                            <img src="./assets/img/dom5.JPG" alt="Random third slide">
+                            <div class="carousel-caption">
+                                <p style="color:rgb(1, 4, 14); font-weight: bold;"></p>
+                            </div>
+                        </ng-template>
+                    </ngb-carousel>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
     <!-- </div> -->
     <!-- </div> -->
     <div style="background-image: url('assets/img/clouds.png');"></div>
