--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,11 +1,11 @@
-<footer class="footer">
+<footer class="footer" >
     <div class="container">
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Contact us</a></li>
-                     <li><a href="/">ABOUT US</a></li>
+                    <li><a href="/">Melkart Minerals</a></li>
+                    <li><a href="/">Nous contacter</a></li>
+                     <!-- <li><a href="/">ABOUT US</a></li> -->
                 </ul>
             </nav>
             <div class="credits ml-auto">
