--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -55,8 +55,8 @@
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
                    <!-- <a class="dropdown-header">Dropdown header</a> -->
                    <a class="dropdown-item" href="domaine">Domaine d'activité</a>
-                   <a class="dropdown-item">Charte qualité</a>
-                   <a class="dropdown-item">Recrutement</a>
+                   <a class="dropdown-item" href="quality">Charte qualité</a>
+                   <a class="dropdown-item" href="jobs">Recrutement</a>
                    <!-- <div class="dropdown-divider"></div>
                    <a class="dropdown-item">Separated link</a>
                    <div class="dropdown-divider"></div>
