removed the backgroung image on bottom

--- a/frontend/src/app/components/entreprise/charte-qualite/charte-qualite.component.html
+++ b/frontend/src/app/components/entreprise/charte-qualite/charte-qualite.component.html
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div
+      <!-- <div
         class="section section-image section-login"
         style="background-image: url('assets/img/login-image.jpg');"
       >
@@ -116,7 +116,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   
