--- a/frontend/src/app/components/entreprise/domaine/domaine.component.html
+++ b/frontend/src/app/components/entreprise/domaine/domaine.component.html
@@ -88,7 +88,7 @@
         </div>
       </div>
     </div>
-    <div
+    <!-- <div
       class="section section-image section-login"
       style="background-image: url('assets/img/login-image.jpg');"
     >
@@ -105,6 +105,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
