--- a/frontend/src/app/components/entreprise/recrutement/recrutement.component.html
+++ b/frontend/src/app/components/entreprise/recrutement/recrutement.component.html
@@ -20,8 +20,7 @@
         </div>
 
         <h2 class="presentation-subtitle text-center">
-          Pour postuler dans notre entreprise, merci de bien vouloir remplir le
-          formulaire :
+          Nous sommes toujours à la recherche de talents pour intégrer notre équipe
         </h2>
       </div>
     </div>
