--- a/frontend/src/app/components/entreprise/charte-qualite/charte-qualite.component.html
+++ b/frontend/src/app/components/entreprise/charte-qualite/charte-qualite.component.html
@@ -7,13 +7,7 @@
       <div class="content-center">
         <div class="container">
           <div class="title-brand">
-            <!-- <div class="angular-logo">
-              <img
-                src="assets/img/logoMelkart.jpg"
-                alt=""
-                style="height: 40px; width: 180px; margin-left: -45px;"
-              />
-            </div> -->
+           
             <h1 class="presentation-title " style="font-size: 50px;">Qualité et Management</h1>
           </div>
        
@@ -46,37 +40,13 @@
                                 <p style="color:rgb(1, 4, 14); font-weight: bold;"> </p>
                             </div>
                         </ng-template>
-                          <!-- <ng-template ngbSlide>
-                              <img src="./assets/img/dom2.jpg" alt="Random second slide">
-                              <div class="carousel-caption">
-                                  <p style="color:rgb(1, 4, 14); font-weight: bold;"> </p>
-                              </div>
-                          </ng-template>
-                          <ng-template ngbSlide>
-                              <img src="./assets/img/dom3.JPG" alt="Random third slide">
-                              <div class="carousel-caption">
-                                  <p style="color:rgb(1, 4, 14); font-weight: bold;"></p>
-                              </div>
-                          </ng-template>
-                          <ng-template ngbSlide>
-                              <img src="./assets/img/dom4.JPG" alt="Random third slide">
-                              <div class="carousel-caption">
-                                  <p style="color:rgb(1, 4, 14); font-weight: bold;"></p>
-                              </div>
-                          </ng-template>
-                          <ng-template ngbSlide>
-                              <img src="./assets/img/dom5.JPG" alt="Random third slide">
-                              <div class="carousel-caption">
-                                  <p style="color:rgb(1, 4, 14); font-weight: bold;"></p>
-                              </div>
-                          </ng-template> -->
+                         
                       </ngb-carousel>
                   </div>
               </div>
           </div>
       </div>
-      <!-- </div> -->
-      <!-- </div> -->
+      
       <div style="background-image: url('assets/img/clouds.png');"></div>
       <h6 class="category-absolute ml-auto mr-auto">MELKART GROUPE</h6>
     </div>
@@ -89,34 +59,18 @@
             <div class="col-md-8 ml-auto mr-auto text-center">
               <h2 class="title">MELKART MINERALS</h2>
               <p class="description">
-                The kit comes with three pre-built pages to help you get started
-                faster. You can change the text and images and you're good to go.
-                More importantly, looking at them will give you a picture of what
-                you can built with this powerful kit.
-              </p>
+                MELKART MINERALS<br/>
+                Arles<br/>
+                215 Avenue Jean RENO<br/>
+                CS 13200<br/>
+                13280 Saintes-Maries-de-la-Mer<br/>
+                Tèl. +33(0)4 65 84 97 02<br/>
+                Fax +33(0)4 87 87 63 44</p>
             </div>
           </div>
         </div>
       </div>
-      <!-- <div
-        class="section section-image section-login"
-        style="background-image: url('assets/img/login-image.jpg');"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 ml-auto mr-auto">
-              <div class="col text-center" routerLinkActive="active">
-                <a
-                  [routerLink]="['/signup']"
-                  class="btn btn-outline-neutral btn-round btn-lg"
-                  >View Register Page</a
-                >
-                
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+     
     </div>
   </div>
   
