--- a/frontend/src/app/components/entreprise/recrutement/recrutement.component.html
+++ b/frontend/src/app/components/entreprise/recrutement/recrutement.component.html
@@ -65,11 +65,14 @@
           <div class="col-md-8 ml-auto mr-auto text-center">
             <h2 class="title">MELKART MINERALS</h2>
             <p class="description">
-              The kit comes with three pre-built pages to help you get started
-              faster. You can change the text and images and you're good to go.
-              More importantly, looking at them will give you a picture of what
-              you can built with this powerful kit.
-            </p>
+                MELKART MINERALS<br/>
+                Arles<br/>
+                215 Avenue Jean RENO<br/>
+                CS 13200<br/>
+                13280 Saintes-Maries-de-la-Mer<br/>
+                Tèl. +33(0)4 65 84 97 02<br/>
+                Fax +33(0)4 87 87 63 44</p>
+            
           </div>
         </div>
       </div>
