ready for heroku

--- a/frontend/src/app/components/components.component.html
+++ b/frontend/src/app/components/components.component.html
@@ -73,21 +73,15 @@
             <h2 class="title">Carbonate de calcium</h2>
             <br />
             <p class="description">
-              Now UI Kit comes with 100 custom icons made by our friends from
-              NucleoApp. The official package contains over 2.100 thin icons
-              which are looking great in combination with Now UI Kit Make sure
-              you check all of them and use those that you like the most.
+                Les dépôts naturels de carbonate de calcium peuvent sembler massifs et immobiles, mais ils subissent en fait un changement graduel.
+
+                Dans ce système, seules les influences atmosphériques entraînent les processus cycliques. L’eau s’évapore et se transforme en gaz ou en vapeur d’eau qui est emportée par le vent et retourne à la surface de la terre sous forme de pluie.
+                
+                Les fines gouttelettes d’eau (p. ex., pluie) absorbent efficacement les impuretés atmosphériques comme le CO2, le SO2 et le NOx, qui se dissolvent pour former des acides. Cette "pluie acide" attaque le calcaire et le décompose.
+                
+                Le bicarbonate de calcium est soluble dans l’eau, ce qui signifie qu’il est emporté dans les océans. Ce processus chimique complète l’érosion mécanique des collines et des montagnes par le vent et l’eau, et est une cause principale de la salinité croissante dans les océans du monde. Dans les océans, les changements
             </p>
-            <br />
-            <a [routerLink]="['/nucleoicons']" class="btn btn-danger btn-round"
-              >View Demo Icons</a
-            >
-            <a
-              href="https://nucleoapp.com/?ref=1712"
-              class="btn btn-outline-danger btn-round"
-              target="_blank"
-              >View All Icons</a
-            >
+           
           </div>
 
           <div class="col-lg-6 col-md-12">
@@ -112,61 +106,24 @@
         </div>
       </div>
     </div>
-    <div class="section section-dark">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 ml-auto mr-auto text-center">
-            <h2 class="title">MELKART MINERALS</h2>
-            <p class="description">
-              The kit comes with three pre-built pages to help you get started
-              faster. You can change the text and images and you're good to go.
-              More importantly, looking at them will give you a picture of what
-              you can built with this powerful kit.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+    
     <div
       class="section section-image section-login"
       style="background-image: url('assets/img/login-image.jpg');"
     >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-12 ml-auto mr-auto">
-            <div class="card card-register">
-              <h3 class="title">Bienvenue</h3>
-              <div class="social-line text-center">
-                <a
-                  href="#pablo"
-                  class="btn btn-neutral btn-facebook btn-just-icon"
-                >
-                  <i class="fa fa-facebook-square"></i>
-                </a>
-                <a
-                  href="#pablo"
-                  class="btn btn-neutral btn-google btn-just-icon"
-                >
-                  <i class="fa fa-google-plus"></i>
-                </a>
-                <a
-                  href="#pablo"
-                  class="btn btn-neutral btn-twitter btn-just-icon"
-                >
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </div>
-            </div>
-            <div class="col text-center" routerLinkActive="active">
-              <a
-                [routerLink]="['/signup']"
-                class="btn btn-outline-neutral btn-round btn-lg"
-                >View Register Page</a
-              >
-            </div>
-          </div>
+    <div class="row">
+        <div class="col-md-8 ml-auto mr-auto text-center">
+    <p class="description">
+        MELKART MINERALS<br/>
+        Arles<br/>
+        215 Avenue Jean RENO<br/>
+        CS 13200<br/>
+        13280 Saintes-Maries-de-la-Mer<br/>
+        Tèl. +33(0)4 65 84 97 02<br/>
+        Fax +33(0)4 87 87 63 44</p>
+     
         </div>
-      </div>
+      </div> 
     </div>
   </div>
 </div>
