--- a/frontend/src/app/components/entreprise/recrutement/recrutement.component.html
+++ b/frontend/src/app/components/entreprise/recrutement/recrutement.component.html
@@ -20,7 +20,7 @@
         </div>
 
         <h2 class="presentation-subtitle text-center">
-          Nous sommes toujours à la recherche de talents pour intégrer notre équipe
+          Nous sommes toujours à la recherche de nouveaux talents pour intégrer notre équipe
         </h2>
       </div>
     </div>
