--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/Melkart-Minerals-Groupe-100139701820745" target="_blank">
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
                     </a>
@@ -29,25 +29,7 @@
                         <p class="d-lg-none">Instagram</p>
                     </a>
                 </li>
-                <!-- <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/paper-kit-2-angular" target="_blank">
-                        <i class="fa fa-github"></i>
-                        <p class="d-lg-none">GitHub</p>
-                    </a>
-                </li> -->
-                <!-- <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
-                </li>
-                <li class="nav-item" *ngIf="isHome()">
-                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local" target="_blank" class="btn btn-danger btn-round">Gamme de produits</a>
-                </li>
-                <li class="nav-item" *ngIf="!isHome()">
-                    <a [routerLink]="['/home']" *ngIf="!isDocumentation()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Components</a>
-                    <a [routerLink]="['/home']" *ngIf="isDocumentation()" class="nav-link">Back to Kit</a>
-                </li>
-                <li class="nav-item" *ngIf="isDocumentation()">
-                    <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local" target="_blank" class="nav-link">Have an issue</a>
-                </li> -->
+               
             </ul>
             
             <div ngbDropdown class="d-inline-block dropdown">
@@ -69,7 +51,7 @@
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
                    <!-- <a class="dropdown-header">Dropdown header</a> -->
                    <a class="dropdown-item" href="/">Carbonate de calcium GCC</a>
-                   <a class="dropdown-item"> la chaux hydraulique naturelle NGL </a>
+                   <a class="dropdown-item"> Chaux hydraulique naturelle NGL </a>
                    <a class="dropdown-item">Silice</a>
                    <div class="dropdown-divider">Gypse</div>
                    <!-- <a class="dropdown-item">Separated link</a>
