--- a/src/app/components/entreprise/recrutement/form/form.component.html
+++ b/src/app/components/entreprise/recrutement/form/form.component.html
@@ -297,6 +297,6 @@ width: 50%;">
         Fax +33(0)4 87 87 63 44</p>
   </fieldset>
   
-  <p style="margin-left:10px"><input type="submit" value="Soummettre"></p>
+  <p style="margin-left:10px"><input type="submit" value="Soumettre"></p>
 </form>
 </div>
