gamme de produits added, categorie carbonate de calcium

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -50,7 +50,7 @@
                 <a  class="btn btn-outline-info btn-round" id="dropdownBasic1" ngbDropdownToggle>Gamme de produits</a>
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
                    <!-- <a class="dropdown-header">Dropdown header</a> -->
-                   <a class="dropdown-item" href="/">Carbonate de calcium GCC</a>
+                   <a class="dropdown-item" href="/carbonate">Carbonate de calcium GCC</a>
                    <a class="dropdown-item"> Chaux hydraulique naturelle NGL </a>
                    <a class="dropdown-item">Silice</a>
                    <div class="dropdown-divider">Gypse</div>
