changed the home page

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div
     class="page-header section-dark"
-    style="background-image: url('assets/img/Calcium_carbonate_rocks.jpg');"
+    style="background-image: url('assets/img/login-image.jpg');"
   >
     <div class="filter"></div>
     <div class="content-center">
@@ -11,13 +11,16 @@
             <img
               src="assets/img/logoMelkart.jpg"
               alt=""
-              style="height: 40px; width: 180px; margin-left: -45px;"
+              style="height: 140px; width: 480px; margin-left: -220px;"
             />
           </div>
-          <h1 class="presentation-title">MELKART</h1>
+          <h1 class="presentation-title" style="font-size: 50px;">MELKART MINERALS</h1>
         </div>
 
-        <h2 class="presentation-subtitle text-center">MINERALS</h2>
+        <h2 class="presentation-subtitle text-center" style="font-weight: bold;">GCC extrait des mines les plus pures d’Afrique du nord, la gamme de
+          carbonate de calcium MELKA se caractérise par sa grande pureté
+          chimique et minéralogique et par un travail d’affinement poussé pour
+          satisfaire les différents besoins des industriels.</h2>
       </div>
     </div>
 
@@ -56,10 +59,10 @@
       </div>
     </div>
     <!-- </div> -->
-    <div
+    <!-- <div
       class="moving-clouds"
       style="background-image: url('assets/img/clouds.png');"
-    ></div>
+    ></div> -->
     <h6 class="category-absolute ml-auto mr-auto">
       MELKART GROUPE
     </h6>
